--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <div class="navbar">
     <div class="py-3">
-        <img class="logo" src="/assets/images/logo.png" alt="">
+        <img class="logo" src="../../../../assets/images/logo.png" alt="logo">
     </div>
     <div class="navbar-nav large">
         <div class="navbar-nav-items">
