removed gh pages

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,4 +6,4 @@
 @import './assets/scss/bundle';
   
 html, body { height: 100%;  }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-image: url('./assets/images/bg-worldmap-full.jpg'); }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-image: url('/assets/images/bg-worldmap-full.jpg'); }
