--- a/src/app/core/components/navbar/navbar.component.scss
+++ b/src/app/core/components/navbar/navbar.component.scss
@@ -64,3 +64,21 @@
         }
     }
 }
+
+.mat-menu-item {
+    font-weight: 500;
+    letter-spacing: 0.5px;
+
+    &.active {
+        background: turquoise;
+        color: white;
+
+        &:hover {
+            background: darken($color: turquoise, $amount: 5);
+        }
+    }
+
+    &:hover {
+        background: rgba($color: #000000, $alpha: .0625);
+    }
+}
